# django-clean-architecture-template

./: .gitignore  README.md  pyproject.toml  pytest.ini
app/api/urls/: routers.py  v1.py
config/: settings.py  urls.py
