[tool.poetry]
name = "project"
version = "0.1.0"
description = "django application"
authors = ["jinhyeok15 <ekfrhd97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.5"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
pydantic = "^1.10.4"
requests = "^2.26.0"
django-redis = "^5.0.0"
celery = "^5.1.2"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
